--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <h3>Perfume</h3>
             <h1>Gabrielle Essence Eau De Parfum</h1>
             <p>A floral, solar and voluptious interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL</p>
-            <p><ins>$149.99</ins> <del tittle="Old price">$169.99</del></p>
-            <button tabindex="1"><img src="./images/icon-cart.svg" alt="Cart icon"><span>Add to Cart</span></button>
+            <p><ins>$149.99</ins> <del>$169.99</del></p>
+            <button tabindex="0"><img src="./images/icon-cart.svg" alt="Cart icon"><span>Add to Cart</span></button>
         </section>
     </main>
     <footer class="attribution">
